better spacing, fonts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Digital Wesleyan Fellowship</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="styles.css" rel="stylesheet"/>
   </head>
@@ -55,14 +54,14 @@
             <h3>Ashley Williams '08, Instructor</h3>
           </li>
         </ul>
-      </section id="partners">
+      </section>
+      <section id="partners">
         <h2>Partners</h2>
         <ul>
           <li><a href="http://www.wesleyan.edu">Wesleyan University</a></li>
           <li><a href="http://www.wesleyan.edu/patricelli/">Patricelli Center for Social Entrepreneurship</a></li>
           <li>jake?</li>
         </ul>
-      <section>
       </section>
       <section id="Workshop">
         <h2>Workshop</h2>
